Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>CYF 0.6.5 Documentation — Yeah, we're doing this.</title>
+<title>CYF 0.6.5 Documentation — A port of the Create Your Frisk documentation to TiddlyWiki5 for no particular reason.</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -332,6 +332,8 @@ Error message and password prompt
 <li>$:/state/toc/TableOfContents/Filter error: Missing [ in filter expression-Filter error: Missing [ in filter expression--1731427739</li>
 
 <li>$:/status/RequireReloadDueToPluginChange</li>
+
+<li>$:/status/UserName</li>
 
 <li>$:/StoryList</li>
 
@@ -11148,8 +11150,8 @@ very-muted-foreground: #888888&lt;/pre&gt;</pre>
     }
 }</pre>
 </div>
-<div created="20201108164638869" modified="20201204125507430" title="$:/SiteSubtitle">
-<pre>Yeah, we're doing this.</pre>
+<div created="20201108164638869" modified="20201204183122428" title="$:/SiteSubtitle">
+<pre>A port of the Create Your Frisk documentation to TiddlyWiki5 for no particular reason.</pre>
 </div>
 <div created="20201108164630588" modified="20201204125501403" title="$:/SiteTitle">
 <pre>CYF 0.6.5 Documentation</pre>
@@ -11232,8 +11234,8 @@ very-muted-foreground: #888888&lt;/pre&gt;</pre>
 <div created="20201108170812215" modified="20201108170834916" title="$:/state/tab--219645345">
 <pre>$:/core/ui/ControlPanel/Plugins/Add/Plugins</pre>
 </div>
-<div created="20201108164358334" modified="20201204163930976" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20201108164358334" modified="20201204183059803" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20201108171432979" modified="20201204181619930" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -11324,6 +11326,9 @@ very-muted-foreground: #888888&lt;/pre&gt;</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
+</div>
+<div created="20201204183128132" creator="D" modified="20201204183130781" modifier="DimitriBarronmor" title="$:/status/UserName">
+<pre>DimitriBarronmore</pre>
 </div>
 <div created="20201204181605617" list="[[Main Page]] $:/ControlPanel" modified="20201204181605617" title="$:/StoryList">
 <pre></pre>
