Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -11330,7 +11330,7 @@ very-muted-foreground: #888888&lt;/pre&gt;</pre>
 <div created="20201204183128132" creator="D" modified="20201204183130781" modifier="DimitriBarronmor" title="$:/status/UserName">
 <pre>DimitriBarronmore</pre>
 </div>
-<div created="20201204181605617" list="[[Main Page]] $:/ControlPanel" modified="20201204181605617" title="$:/StoryList">
+<div created="20201204181605617" creator="DimitriBarronmore" list="[[Main Page]] $:/ControlPanel cyf/read-documentation cyf/setup-unity" modified="20201204183405752" modifier="DimitriBarronmore" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201108165852924" list="$:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/edit $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/close" modified="20201108165859551" title="$:/tags/ViewToolbar">
@@ -12673,7 +12673,7 @@ These simply mean that the relevant variable, function or object is accessible f
 *  ''[M]:'' Monster scripts.
 *   ''[W]:'' Wave scripts.</pre>
 </div>
-<div caption="Unity Setup (Optional)" created="20201204150627884" modified="20201204151533662" tags="cyf/basics" title="cyf/setup-unity">
+<div caption="Unity Setup (Optional)" created="20201204150627884" creator="DimitriBarronmore" modified="20201204183421619" modifier="DimitriBarronmore" tags="cyf/basics" title="cyf/setup-unity">
 <pre>This page will cover how to set up Create Your Frisk in the Unity editor, which is necessary for utilizing Create Your Frisk's Overworld feature, as well as for setting up shaders. It is also helpful for seeing the way encounters work from the Unity side, and in particular how sprite layers work.
 
 !!Get Started
@@ -12725,7 +12725,10 @@ If running from the command line, you may provide two arguments to specify the b
         Linux 64-bit
         Mac
 
-Your build(s) of Create Your Frisk will appear in a folder named `bin` within your CYF installation! </pre>
+Your build(s) of Create Your Frisk will appear in a folder named `bin` within your CYF installation! 
+
+
+ </pre>
 </div>
 <div created="20201108164931366" list-before="" modified="20201204130613076" tags="TableOfContents $:/hidetags" title="Main Page">
 <pre>!__Welcome to Create your Frisk's documentation!__
