Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -11240,11 +11240,11 @@ very-muted-foreground: #888888&lt;/pre&gt;</pre>
 <div created="20201108171432979" modified="20201204181619930" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20201108193513573" modified="20201203213322763" title="$:/state/tab/moresidebar-1850697562">
+<div created="20201108193513573" creator="DimitriBarronmore" modified="20201204183611819" modifier="DimitriBarronmore" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20201108164013999" modified="20201204150014711" title="$:/state/tab/sidebar--595412856">
-<pre>TableOfContents</pre>
+<div created="20201108164013999" creator="DimitriBarronmore" modified="20201204183704770" modifier="DimitriBarronmore" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20201108165943573" modified="20201108171827506" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
@@ -11330,7 +11330,7 @@ very-muted-foreground: #888888&lt;/pre&gt;</pre>
 <div created="20201204183128132" creator="D" modified="20201204183130781" modifier="DimitriBarronmor" title="$:/status/UserName">
 <pre>DimitriBarronmore</pre>
 </div>
-<div created="20201204181605617" creator="DimitriBarronmore" list="[[Main Page]] $:/ControlPanel cyf/read-documentation cyf/setup-unity" modified="20201204183405752" modifier="DimitriBarronmore" title="$:/StoryList">
+<div created="20201204181605617" creator="DimitriBarronmore" list="[[Main Page]] cyf/read-documentation cyf/setup-unity" modified="20201204183405752" modifier="DimitriBarronmore" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201108165852924" list="$:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/edit $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/close" modified="20201108165859551" title="$:/tags/ViewToolbar">
