--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/AutoSave</li>
+
 <li>$:/config/DefaultSidebarTab</li>
 
 <li>$:/config/DownloadSaver/AutoSave</li>
@@ -607,6 +609,8 @@ Error message and password prompt
 
 <li>cyf/setup-unity</li>
 
+<li>Draft of 'cyf/setup-unity' by DimitriBarronmore</li>
+
 <li>Main Page</li>
 
 <li>TableOfContents</li>
@@ -629,6 +633,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20201204184254784" creator="DimitriBarronmore" modified="20201204184254784" modifier="DimitriBarronmore" title="$:/config/AutoSave">
+<pre>no</pre>
+</div>
 <div created="20201108235645707" modified="20201108235645707" title="$:/config/DefaultSidebarTab">
 <pre>TableOfContents</pre>
 </div>
@@ -11234,10 +11241,10 @@ very-muted-foreground: #888888&lt;/pre&gt;</pre>
 <div created="20201108170812215" modified="20201108170834916" title="$:/state/tab--219645345">
 <pre>$:/core/ui/ControlPanel/Plugins/Add/Plugins</pre>
 </div>
-<div created="20201108164358334" modified="20201204183059803" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20201108164358334" creator="DimitriBarronmore" modified="20201204184243823" modifier="DimitriBarronmore" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20201108171432979" modified="20201204181619930" title="$:/state/tab-2065006209">
+<div created="20201108171432979" creator="DimitriBarronmore" modified="20201204184256259" modifier="DimitriBarronmore" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20201108193513573" creator="DimitriBarronmore" modified="20201204183611819" modifier="DimitriBarronmore" title="$:/state/tab/moresidebar-1850697562">
@@ -11330,7 +11337,7 @@ very-muted-foreground: #888888&lt;/pre&gt;</pre>
 <div created="20201204183128132" creator="D" modified="20201204183130781" modifier="DimitriBarronmor" title="$:/status/UserName">
 <pre>DimitriBarronmore</pre>
 </div>
-<div created="20201204181605617" creator="DimitriBarronmore" list="[[Main Page]] cyf/read-documentation cyf/setup-unity" modified="20201204183405752" modifier="DimitriBarronmore" title="$:/StoryList">
+<div created="20201204184241253" creator="DimitriBarronmore" list="[[Main Page]] [[Draft of 'cyf/setup-unity' by DimitriBarronmore]] $:/ControlPanel" modified="20201204184313030" modifier="DimitriBarronmore" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201108165852924" list="$:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/edit $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/close" modified="20201108165859551" title="$:/tags/ViewToolbar">
@@ -11349,19 +11356,19 @@ very-muted-foreground: #888888&lt;/pre&gt;</pre>
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///media/data/Create%20Your%20Frisk/cyf_documentation.html&quot;
+            &quot;text&quot;: &quot;https://dimitribarronmore.github.io/cyf-docs/&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;dimitribarronmore.github.io&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;dimitribarronmore.github.io&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;file:&quot;
+            &quot;text&quot;: &quot;https:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -11369,7 +11376,7 @@ very-muted-foreground: #888888&lt;/pre&gt;</pre>
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/media/data/Create%20Your%20Frisk/cyf_documentation.html&quot;
+            &quot;text&quot;: &quot;/cyf-docs/&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -11377,7 +11384,7 @@ very-muted-foreground: #888888&lt;/pre&gt;</pre>
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;null&quot;
+            &quot;text&quot;: &quot;https://dimitribarronmore.github.io&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -12729,6 +12736,60 @@ Your build(s) of Create Your Frisk will appear in a folder named `bin` within yo
 
 
  </pre>
+</div>
+<div caption="Unity Setup (Optional)" created="20201204150627884" creator="DimitriBarronmore" draft.of="cyf/setup-unity" draft.title="cyf/setup-unity" modified="20201204184325236" modifier="DimitriBarronmore" tags="cyf/basics" title="Draft of 'cyf/setup-unity' by DimitriBarronmore">
+<pre>This page will cover how to set up Create Your Frisk in the Unity editor, which is necessary for utilizing Create Your Frisk's Overworld feature, as well as for setting up shaders. It is also helpful for seeing the way encounters work from the Unity side, and in particular how sprite layers work.
+
+!!Get Started
+
+To get started, you'll need to, first of all, download the current version of Unity that CYF uses, and, of course, download the project via Github.
+
+To do this, go to the [[Releases|https://github.com/RhenaudTheLukark/CreateYourFrisk/releases]] section, find the latest version of Create Your Frisk, scroll down to its downloads section, and download Source Code (zip). You will need to extract it (you should have a means to extract it already on your computer).
+
+Once the folder is extracted, you will need to open it as a project in Unity. Download the version of Unity used to build the version of Create Your Frisk.
+
+''__Create Your Frisk v0.6.5 was built using [[Unity Personal 2018.2.13f1.|https://netstorage.unity3d.com/unity/83fbdcd35118/UnityDownloadAssistant-2018.2.13f1.exe]]__''
+
+Unity may take a lot of time to install and to load the project for the first time, due to a lot of resources being registered by Unity - but you won't have to do it again in the future.
+
+!!Once you're in
+
+Once you're in, you'll have to load the scene `Assets/Scenes/Disclaimer.unity` using the command `File =&gt; Open Scene` at the top left corner of Unity's window. You should always start play mode from this scene when using Create Your Frisk in Unity.
+
+In order to set up the viewport properly, first switch to the &quot;Game&quot; tab (`Window =&gt; General =&gt; Game`, or click it in the editor). Within the Game tab, find the button labelled `Display 1`. Next to it should be another button, most likely labelled `Free Aspect`. Click on it, click the &quot;plus&quot; sign at the bottom of the list that appears, and add an option with a fixed resolution of `640` x `480`.
+
+__This is Create Your Frisk's native resolution, and viewing it like this ensures that everything you see in the Unity editor will look exactly the same in the built version of Create Your Frisk.__
+
+!! Where is everything?
+
+Look in the folder `Assets` within the folder you extracted earlier. In here, the folder named `Default` is the same as the folder named `Default` in the built executable versions of Create Your Frisk. Likewise, `Mods` is the same as the `Mods` folder in the built versions of CYF. Load all of your mods here if you want them playable in the editor.
+
+Another folder here is `Scenes`. If you are using Create Your Frisk's Overworld feature, this is where all overworld scenes will go. See the [[Overworld|cyf/overworld]] section of the documentation for more information.
+
+Also within `Assets` the folder `Editor` is used for shaders. It contains a folder `Shaders`, which is where all of your original shader files go, and another folder `Output`, which is where your shaders will be compiled into AssetBundles. Read [[Shaders - Introduction|cyf/shaders/introduction]] for more information.
+
+!!Building CYF
+
+This is an optional step, for if you want or need to export Create Your Frisk to a built executable. Within your Create Your Frisk installation is a python script, named `Build.py`. It uses [[Python v3.7.4|https://www.python.org/downloads/release/python-374/]]. This is the script used to build CYF into executables. You can optionally install [[7-zip|https://www.7-zip.org/]] as well, if you want the script to automatically package your builds into archives.
+
+You should first peek inside the script and edit it as needed - you only need change one or two lines. You can change the variable `CYFversion` to dictate the names of the created folders (or edit them yourself in `buildTargets` and `macTarget`). Next, check the variable `unityPath` - you need to set it to the path of your machine's Unity installation, if it is not already set to it.
+
+Make sure Create Your Frisk is __the last project opened in Unity.__ Then, __CLOSE UNITY__ before running the script.
+
+Actually running the script also has some documentation at the top of the file itself. You can either run the script directly (double click it) or run it from the command line (varies depending on your operating system). If you do the former option, or do the second option with no extra setup, the script will attempt to create all 5 builds, and archive them if possible.
+
+If running from the command line, you may provide two arguments to specify the build process:
+
+    `--nozip:` Does not attempt to package the resulting builds into archives with 7-zip.
+
+    `--single [id]:` Only creates one of the possible builds. id should be from 1 to 5:
+        Windows 32-bit
+        Windows 64-bit
+        Linux 32-bit
+        Linux 64-bit
+        Mac
+
+Your build(s) of Create Your Frisk will appear in a folder named `bin` within your CYF installation! </pre>
 </div>
 <div created="20201108164931366" list-before="" modified="20201204130613076" tags="TableOfContents $:/hidetags" title="Main Page">
 <pre>!__Welcome to Create your Frisk's documentation!__
