--- a/index.html
+++ b/index.html
@@ -659,8 +659,8 @@ Error message and password prompt
 <div created="20201108183809936" modified="20201108183809937" title="$:/config/Navigation/openLinkFromOutsideRiver">
 <pre>bottom</pre>
 </div>
-<div created="20201108235712180" modified="20201108235712180" title="$:/config/Navigation/UpdateAddressBar">
-<pre>permaview</pre>
+<div created="20201108235712180" creator="DimitriBarronmore" modified="20201207012427065" modifier="DimitriBarronmore" title="$:/config/Navigation/UpdateAddressBar">
+<pre>permalink</pre>
 </div>
 <div created="20201108235714512" modified="20201108235714512" title="$:/config/Navigation/UpdateHistory">
 <pre>yes</pre>
@@ -680,7 +680,7 @@ Error message and password prompt
 <div created="20201108233315465" modified="20201109005058443" title="$:/config/RelinkOnRename">
 <pre>yes</pre>
 </div>
-<div created="20201108235650626" modified="20201108235656435" title="$:/config/TextEditor/EnableToolbar">
+<div created="20201108235650626" creator="DimitriBarronmore" modified="20201207012420575" modifier="DimitriBarronmore" title="$:/config/TextEditor/EnableToolbar">
 <pre>yes</pre>
 </div>
 <div created="20201108235722518" modified="20201108235722518" title="$:/config/Tiddlers/TitleLinks">
@@ -11261,8 +11261,8 @@ very-muted-foreground: #888888&lt;/pre&gt;</pre>
 <div created="20201108170812215" modified="20201108170834916" title="$:/state/tab--219645345">
 <pre>$:/core/ui/ControlPanel/Plugins/Add/Plugins</pre>
 </div>
-<div created="20201108164358334" creator="DimitriBarronmore" modified="20201204184243823" modifier="DimitriBarronmore" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20201108164358334" creator="DimitriBarronmore" modified="20201207012356575" modifier="DimitriBarronmore" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Settings</pre>
 </div>
 <div created="20201108171432979" creator="DimitriBarronmore" modified="20201207002836258" modifier="DimitriBarronmore" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
@@ -11360,7 +11360,7 @@ very-muted-foreground: #888888&lt;/pre&gt;</pre>
 <div created="20201204183128132" creator="D" modified="20201204183130781" modifier="DimitriBarronmor" title="$:/status/UserName">
 <pre>DimitriBarronmore</pre>
 </div>
-<div created="20201207002818859" creator="DimitriBarronmore" list="[[Main Page]] cyf/special-variables cyf/special-variables/monster-script" modified="20201207005305227" modifier="DimitriBarronmore" title="$:/StoryList">
+<div created="20201207002818859" creator="DimitriBarronmore" list="[[Main Page]] cyf/special-variables cyf/special-variables/monster-script $:/ControlPanel" modified="20201207012354781" modifier="DimitriBarronmore" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201108165852924" list="$:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/edit $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/close" modified="20201108165859551" title="$:/tags/ViewToolbar">
