added autocomplete macros for all documentation formatting spans

--- a/index.html
+++ b/index.html
@@ -147,6 +147,26 @@ Error message and password prompt
 
 <li>$:/_code formatting stylesheet</li>
 
+<li>$:/_cyf/formatting/boolean</li>
+
+<li>$:/_cyf/formatting/function</li>
+
+<li>$:/_cyf/formatting/links</li>
+
+<li>$:/_cyf/formatting/luatable</li>
+
+<li>$:/_cyf/formatting/number</li>
+
+<li>$:/_cyf/formatting/ref</li>
+
+<li>$:/_cyf/formatting/string</li>
+
+<li>$:/_cyf/formatting/term</li>
+
+<li>$:/_cyf/formatting/unitale</li>
+
+<li>$:/_cyf/formatting/userdata</li>
+
 <li>$:/_left-sidebar</li>
 
 <li>$:/_notags</li>
@@ -206,8 +226,6 @@ Error message and password prompt
 <li>$:/core</li>
 
 <li>$:/core/ui/TopBar/menu</li>
-
-<li>$:/cyf/formatting/function</li>
 
 <li>$:/DefaultTiddlers</li>
 
@@ -899,6 +917,36 @@ span.new::before {
     font-family:monospace;
 }
 </pre>
+</div>
+<div created="20210621085910279" modified="20210621085921858" tags="$:cyf-formatting" title="$:/_cyf/formatting/boolean">
+<pre>&lt;span class=&quot;boolean&quot;&gt;</pre>
+</div>
+<div created="20210621061213328" modified="20210621085622940" tags="$:cyf-formatting" title="$:/_cyf/formatting/function">
+<pre>&lt;span class=&quot;function&quot;&gt;</pre>
+</div>
+<div created="20210621090653070" modified="20210621090713511" title="$:/_cyf/formatting/links">
+<pre>&lt;a href={{!!title}}&gt;</pre>
+</div>
+<div created="20210621085837791" modified="20210621085849409" tags="$:cyf-formatting" title="$:/_cyf/formatting/luatable">
+<pre>&lt;span class=&quot;luatable&quot;&gt;</pre>
+</div>
+<div created="20210621085852751" modified="20210621085905659" tags="$:cyf-formatting" title="$:/_cyf/formatting/number">
+<pre>&lt;span class=&quot;number&quot;&gt;</pre>
+</div>
+<div created="20210621085732824" modified="20210621085754773" tags="$:cyf-formatting" title="$:/_cyf/formatting/ref">
+<pre>&lt;span class=&quot;ref&quot;&gt;</pre>
+</div>
+<div created="20210621085809165" modified="20210621085824022" tags="$:cyf-formatting" title="$:/_cyf/formatting/string">
+<pre>&lt;span class=&quot;string&quot;&gt;</pre>
+</div>
+<div created="20210621085640687" modified="20210621085718665" tags="$:cyf-formatting" title="$:/_cyf/formatting/term">
+<pre>&lt;span class=&quot;term&quot;&gt;</pre>
+</div>
+<div created="20210621090021274" modified="20210621090034116" tags="$:cyf-formatting" title="$:/_cyf/formatting/unitale">
+<pre>&lt;span class=&quot;unitale&quot;&gt;</pre>
+</div>
+<div created="20210621085953025" modified="20210621090017135" tags="$:cyf-formatting" title="$:/_cyf/formatting/userdata">
+<pre>&lt;span class=&quot;userdata&quot;&gt;</pre>
 </div>
 <div created="20170108111615683" modified="20210621041048420" tags="$:/tags/Stylesheet" title="$:/_left-sidebar">
 <pre>.tc-sidebar-scrollable {
@@ -10454,9 +10502,6 @@ span.new::before {
 &lt;/$reveal&gt;
 </pre>
 </div>
-<div created="20210621061213328" modified="20210621061441010" tags="$:cyf-formatting" title="$:/cyf/formatting/function">
-<pre>&lt;span class=&quot;function&quot;&gt;</pre>
-</div>
 <div created="20201108164718829" modified="20201108164729874" title="$:/DefaultTiddlers">
 <pre>[[Main Page]]</pre>
 </div>
@@ -12231,7 +12276,7 @@ exports.Completion = Completion;
     
 </pre>
 </div>
-<div created="20210621061107921" modified="20210621083929420" title="$:/plugins/snowgoon88/edit-comptext/config" type="application/json">
+<div created="20210621061107921" modified="20210621091110990" title="$:/plugins/snowgoon88/edit-comptext/config" type="application/json">
 <pre>{
   &quot;configuration&quot;: {
       &quot;caseSensitive&quot; : false,
@@ -12252,7 +12297,7 @@ exports.Completion = Completion;
       },{
       &quot;pattern&quot;: &quot;&lt;&lt;&quot;,
       &quot;body&quot;: &quot;[tag[$:cyf-formatting]]&quot;,
-      &quot;mask&quot; : &quot;$:/cyf/formatting/&quot;,
+      &quot;mask&quot; : &quot;$:/_cyf/formatting/&quot;,
       &quot;start&quot;: &quot;&quot;,
       &quot;end&quot;: &quot;&lt;/span&gt;&quot;,
       &quot;endOffset&quot;:7
@@ -12460,7 +12505,7 @@ exports.Completion = Completion;
 <div created="20201108193513573" modified="20210621041329386" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/System</pre>
 </div>
-<div created="20201108164013999" modified="20210621083846521" title="$:/state/tab/sidebar--595412856">
+<div created="20201108164013999" modified="20210621090341307" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20201108165943573" modified="20210621054026478" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -12610,7 +12655,7 @@ exports.Completion = Completion;
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210621083823813" list="$:/plugins/snowgoon88/edit-comptext/completion.js $:/ControlPanel $:/plugins/snowgoon88/edit-comptext/config" modified="20210621083827100" title="$:/StoryList">
+<div created="20210621085439321" list="[[Organization Draft]] $:/_cyf/formatting/function [[$:/_code formatting stylesheet]] $:/ControlPanel $:/plugins/snowgoon88/edit-comptext/config $:/_cyf/formatting/links" modified="20210621090352449" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201108165852924" list="$:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/edit $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/close" modified="20201108165859551" title="$:/tags/ViewToolbar">
@@ -12629,7 +12674,7 @@ exports.Completion = Completion;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///home/owner/media_backup/aaa_Programming%20Nonsense/Create%20Your%20Frisk/cyf_documentation_t.html&quot;
+            &quot;text&quot;: &quot;file:///home/owner/media_backup/aaa_Programming%20Nonsense/Create%20Your%20Frisk/cyf-docs/index.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -12649,7 +12694,7 @@ exports.Completion = Completion;
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/home/owner/media_backup/aaa_Programming%20Nonsense/Create%20Your%20Frisk/cyf_documentation_t.html&quot;
+            &quot;text&quot;: &quot;/home/owner/media_backup/aaa_Programming%20Nonsense/Create%20Your%20Frisk/cyf-docs/index.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
