add snippet for html self-links>

--- a/index.html
+++ b/index.html
@@ -924,8 +924,8 @@ span.new::before {
 <div created="20210621061213328" modified="20210621085622940" tags="$:cyf-formatting" title="$:/_cyf/formatting/function">
 <pre>&lt;span class=&quot;function&quot;&gt;</pre>
 </div>
-<div created="20210621090653070" modified="20210621090713511" title="$:/_cyf/formatting/links">
-<pre>&lt;a href={{!!title}}&gt;</pre>
+<div created="20210621090653070" modified="20210621092722681" tags="$:/tags/TextEditor/Snippet" title="$:/_cyf/formatting/links">
+<pre>&lt;a href={{!!title}}&gt;&lt;/a&gt;</pre>
 </div>
 <div created="20210621085837791" modified="20210621085849409" tags="$:cyf-formatting" title="$:/_cyf/formatting/luatable">
 <pre>&lt;span class=&quot;luatable&quot;&gt;</pre>
@@ -12276,7 +12276,7 @@ exports.Completion = Completion;
     
 </pre>
 </div>
-<div created="20210621061107921" modified="20210621091110990" title="$:/plugins/snowgoon88/edit-comptext/config" type="application/json">
+<div created="20210621061107921" modified="20210621092702590" title="$:/plugins/snowgoon88/edit-comptext/config" type="application/json">
 <pre>{
   &quot;configuration&quot;: {
       &quot;caseSensitive&quot; : false,
@@ -12505,7 +12505,7 @@ exports.Completion = Completion;
 <div created="20201108193513573" modified="20210621041329386" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/System</pre>
 </div>
-<div created="20201108164013999" modified="20210621090341307" title="$:/state/tab/sidebar--595412856">
+<div created="20201108164013999" modified="20210621092627084" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20201108165943573" modified="20210621054026478" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -12655,7 +12655,7 @@ exports.Completion = Completion;
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210621085439321" list="[[Organization Draft]] $:/_cyf/formatting/function [[$:/_code formatting stylesheet]] $:/ControlPanel $:/plugins/snowgoon88/edit-comptext/config $:/_cyf/formatting/links" modified="20210621090352449" title="$:/StoryList">
+<div created="20210621092152471" list="[[Main Page]]" modified="20210621092256320" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201108165852924" list="$:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/edit $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/close" modified="20201108165859551" title="$:/tags/ViewToolbar">
@@ -12719,7 +12719,7 @@ exports.Completion = Completion;
     }
 }</pre>
 </div>
-<div created="20201108164952951" modified="20210620033159238" title="$:/temp/NewTagName">
+<div created="20201108164952951" modified="20210621092314659" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div author="Paco Rivière" core-version="&gt;=5.0.0" created="20201108170806628" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20201108170806628" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
