fix minor oversight with a failed transclusion

--- a/index.html
+++ b/index.html
@@ -13438,7 +13438,7 @@ exports.Completion = Completion;
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20210709204130829" list="[[Main Page]]" modified="20210709204714051" title="$:/StoryList" revision="17" bag="default">
+<div created="20210709204130829" list="[[Main Page]] [[Getting Started]] [[Mod Setup]]" modified="20210709205458139" title="$:/StoryList" revision="21" bag="default">
 <pre></pre>
 </div>
 <div created="20201108165852924" list="$:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/permalink $:/core/ui/Buttons/edit $:/core/ui/Buttons/delete $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/close" modified="20210709204639496" title="$:/tags/ViewToolbar" revision="5" bag="default">
@@ -13994,12 +13994,12 @@ the player.
 
 ''&lt;span class=&quot;term&quot;&gt;Left or Right arrows&lt;/span&gt;'' - Scroll through your installed mods.</pre>
 </div>
-<div created="20210621175318646" modified="20210709202827923" tags="[[Getting Started]] [[Full Reference]]" title="Mod Setup" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20210621175318646" modified="20210709205504246" tags="[[Getting Started]] [[Full Reference]]" title="Mod Setup" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>&lt;h2&gt;[[Types of Script]]&lt;/h2&gt;
 
 By this point you'll probably want to set up an encounter of your own. Currently, scripts are set up like this:
 
-{{Types of Scrip t}}
+{{Types of Script}}
 
 From the mod selection screen, you may pick any mod, and play any encounter script within that mod.
 
